// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff library characterization (extension) > computeUnifiedDiffStats on patches written elsewhere > a CRLF patch 1`] = `
{
  "added": 1,
  "removed": 1,
}
`;

exports[`diff library characterization (extension) > computeUnifiedDiffStats on patches written elsewhere > a git diff with extended headers 1`] = `
{
  "added": 1,
  "removed": 1,
}
`;

exports[`diff library characterization (extension) > computeUnifiedDiffStats on patches written elsewhere > a patch with a no-newline marker 1`] = `
{
  "added": 1,
  "removed": 1,
}
`;

exports[`diff library characterization (extension) > computeUnifiedDiffStats on patches written elsewhere > an empty string 1`] = `null`;

exports[`diff library characterization (extension) > computeUnifiedDiffStats on patches written elsewhere > not a patch 1`] = `
{
  "added": 0,
  "removed": 0,
}
`;

exports[`diff library characterization (extension) > computeUnifiedDiffStats on patches written elsewhere > only a hunk 1`] = `
{
  "added": 1,
  "removed": 1,
}
`;

exports[`diff library characterization (extension) > computeUnifiedDiffStats on patches written elsewhere > two files 1`] = `
{
  "added": 3,
  "removed": 2,
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > CRLF content 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ src/new.ts
@@ -0,0 +1,2 @@
+a
+b
",
  "stats": {
    "added": 2,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > a file name with a quote and a backslash 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ src/quote"and\\backslash.ts
@@ -0,0 +1,1 @@
+a
",
  "stats": {
    "added": 1,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > a file name with a tab 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ src/tab	here.ts
@@ -0,0 +1,1 @@
+a
",
  "stats": {
    "added": 1,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > a file name with spaces 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ src/my file.ts
@@ -0,0 +1,1 @@
+a
",
  "stats": {
    "added": 1,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > a non-ASCII file name 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ src/zażółć gęślą.ts
@@ -0,0 +1,1 @@
+a
",
  "stats": {
    "added": 1,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > a single newline 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ src/new.ts
@@ -0,0 +1,1 @@
+
",
  "stats": {
    "added": 1,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > empty content 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ src/new.ts
",
  "stats": {
    "added": 0,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > lines with a trailing newline 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ src/new.ts
@@ -0,0 +1,2 @@
+a
+b
",
  "stats": {
    "added": 2,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > lines without a trailing newline 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ src/new.ts
@@ -0,0 +1,2 @@
+a
+b
\\ No newline at end of file
",
  "stats": {
    "added": 2,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > convertNewFileToUnifiedDiff + computeDiffStats > no file name 1`] = `
{
  "patch": "===================================================================
--- /dev/null
+++ file
@@ -0,0 +1,1 @@
+a
",
  "stats": {
    "added": 1,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > CRLF on both sides 1`] = `
{
  "patch": "@@ -1,3 +1,3 @@
 a
-b
+X
 c
",
  "stats": {
    "added": 1,
    "removed": 1,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > CRLF to LF 1`] = `
{
  "patch": "@@ -1,2 +1,2 @@
-a
-b
+a
+b
",
  "stats": {
    "added": 2,
    "removed": 2,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > a lone carriage return inside a line 1`] = `
{
  "patch": "@@ -1,2 +1,2 @@
 a
b
-c
+C
",
  "stats": {
    "added": 1,
    "removed": 1,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > control characters inside lines 1`] = `
{
  "patch": "@@ -1,3 +1,3 @@
 ab
-cd
+Cd
 ef
",
  "stats": {
    "added": 1,
    "removed": 1,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > file emptied 1`] = `
{
  "patch": "@@ -1,2 +0,0 @@
-first
-second
",
  "stats": {
    "added": 0,
    "removed": 2,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > lines that look like patch headers 1`] = `
{
  "patch": "@@ -1,3 +1,3 @@
--- a sql comment
-++counter
+--- not a header
++++ nor this
 keep
",
  "stats": {
    "added": 2,
    "removed": 2,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > neither with a trailing newline 1`] = `
{
  "patch": "@@ -1,2 +1,2 @@
 a
-b

+c

",
  "stats": {
    "added": 1,
    "removed": 1,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > new file from empty 1`] = `
{
  "patch": "@@ -0,0 +1,2 @@
+first
+second
",
  "stats": {
    "added": 2,
    "removed": 0,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > new file without trailing newline 1`] = `
{
  "patch": "@@ -1,2 +1,2 @@
 a
-b
+c

",
  "stats": {
    "added": 1,
    "removed": 1,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > old file without trailing newline 1`] = `
{
  "patch": "@@ -1,2 +1,3 @@
 a
-b

+b
+c
",
  "stats": {
    "added": 2,
    "removed": 1,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > one changed line 1`] = `
{
  "patch": "@@ -1,3 +1,3 @@
 a
-b
+B
 c
",
  "stats": {
    "added": 1,
    "removed": 1,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > repeated lines 1`] = `
{
  "patch": "@@ -1,5 +1,5 @@
-x
 y
 x
 y
 x
+y
",
  "stats": {
    "added": 1,
    "removed": 1,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > swapped neighbours 1`] = `
{
  "patch": "@@ -1,4 +1,4 @@
 a
-b
 c
+b
 d
",
  "stats": {
    "added": 1,
    "removed": 1,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > two hunks far apart 1`] = `
{
  "patch": "@@ -1,5 +1,5 @@
 line 1
-line 2
+LINE 2
 line 3
 line 4
 line 5
@@ -15,6 +15,6 @@
 line 15
 line 16
 line 17
-line 18
+LINE 18
 line 19
 line 20
",
  "stats": {
    "added": 2,
    "removed": 2,
  },
}
`;

exports[`diff library characterization (extension) > formatResponse.createPrettyPatch + sanitizeUnifiedDiff + computeDiffStats > undefined contents 1`] = `
{
  "patch": "",
  "stats": null,
}
`;
